CEP处理复杂事件，恶意登录事件的检测。

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>HotItemsAnalysis</module>
         <module>NetworkFlowAnalysis02</module>
         <module>MarketAnalysis03</module>
+        <module>LoginFailDetect04</module>
     </modules>
 
     <properties>
